<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InicioActivity">

    <Button
        android:id="@+id/btn_comenzar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_modelo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/boton"
        android:text="@string/btn_comenzar"
        android:textColor="@color/texto_boton" />

    <EditText
        android:id="@+id/name_modelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/name_modelo"
        android:inputType="text"
        android:textColorHint="@color/texto" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name_modelo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:elevation="12dp"
        android:src="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/btn_info_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/ayuda"
        android:elevation="12dp"
        android:src="@drawable/help" />

</RelativeLayout>
