<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yourchoice.DecideActivity">

    <ImageView
        android:id="@+id/conj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/conj"
        android:src="@drawable/conj" />

    <ImageView
        android:id="@+id/disj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/conj"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/disj"
        android:src="@drawable/disj" />

    <SeekBar
        android:id="@+id/barra_polaridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/conj"
        android:layout_marginTop="30dp"
        android:indeterminate="false"
        android:max="4"
        android:progress="2"
        android:progressTint="@color/orange"
        android:thumbTint="@color/texto" />

    <Button
        android:id="@+id/btn_decidir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barra_polaridad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/boton"
        android:text="@string/btn_decidir"
        android:textColor="@color/texto_boton" />

    <ImageButton
        android:id="@+id/btn_info_decide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:contentDescription="@string/ayuda"
        android:elevation="12dp"
        android:src="@drawable/help" />

</RelativeLayout>
